Add reference to original

--- a/calico.yml
+++ b/calico.yml
@@ -1,5 +1,5 @@
 ---
-
+# based on https://docs.projectcalico.org/v2.4/getting-started/kubernetes/installation/hosted/kubeadm/1.6/calico.yaml
 kind: ConfigMap
 apiVersion: v1
 metadata:
