--- a/calico.yml
+++ b/calico.yml
@@ -22,19 +22,19 @@ data:
         {
           "type": "calico",
           "log_level": "debug",
-          "datastore_type": "kubernetes",
+          "etcd_endpoints": "__ETCD_ENDPOINTS__",
+          "mtu": 1500,
           "nodename": "__KUBERNETES_NODE_NAME__",
           "ipam": {
-            "type": "host-local",
-            "subnet": "usePodCidr"
+            "type": "calico-ipam"
           },
           "policy": {
             "type": "k8s",
+            "k8s_api_root": "https://__KUBERNETES_SERVICE_HOST__:__KUBERNETES_SERVICE_PORT__",
             "k8s_auth_token": "__SERVICEACCOUNT_TOKEN__"
           },
           "kubernetes": {
-            "k8s_api_root": "https://__KUBERNETES_SERVICE_HOST__:__KUBERNETES_SERVICE_PORT__",
-            "kubeconfig": "__KUBECONFIG_FILEPATH__"
+            "kubeconfig": "/etc/cni/net.d/__KUBECONFIG_FILENAME__"
           }
         },
         {
