--- a/calico.yml
+++ b/calico.yml
@@ -23,7 +23,6 @@ data:
           "type": "calico",
           "log_level": "debug",
           "etcd_endpoints": "__ETCD_ENDPOINTS__",
-          "mtu": 1500,
           "ipam": {
             "type": "calico-ipam"
           },
@@ -39,7 +38,7 @@ data:
         {
           "type": "portmap",
           "capabilities": {"portMappings": true},
-          "snat": false
+          "snat": true
         }
       ]
     }
